fix(wanderlog): make checkbox tick visible

--- a/styles/wanderlog/catppuccin.user.less
+++ b/styles/wanderlog/catppuccin.user.less
@@ -358,6 +358,9 @@
       background-color: @accent;
       color: @base;
     }
+    .Checkbox__checkmark {
+      filter: @base-filter !important;
+    }
     .Checkbox__edit:active + .Checkbox__box,
     .Checkbox__edit:focus + .Checkbox__box,
     .Checkbox__edit:hover + .Checkbox__box {
